# KnowRAG

./: .env.example  .gitignore  README.md  main.py  requirements.txt
backend/app/api/: chat.py  documents.py  ingestion.py  retrieval.py  settings.py
backend/app/ingestion/: markdown_cleaner.py
backend/app/schemas/: chat.py  document_routes.py  documents.py  ingestion.py  ingestion_routes.py  query_routing.py  retrieval.py
backend/app/services/: app_config.py  bm25_encoder.py  chat_model_settings.py  chunk_embedder.py  document_chunker.py  document_repository.py  document_service.py  openai_chat.py  (+11 more)
desktop-pet/: README.md  index.html  package-lock.json  package.json  vite.config.js
desktop-pet/src/: App.vue  style.css
desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
desktop-pet/src-tauri/capabilities/: default.json
desktop-pet/src-tauri/src/: lib.rs  main.rs
docs/: 2.2.1 Agent - ChiefArchitect（总架构师）.md
evaluation/: retrieval_seed.jsonl
frontend/: app.js  index.html
infra/milvus/: docker-compose.yml
scripts/: evaluate_rag_answer.py  evaluate_retrieval.py  start_milvus.py  stop_milvus.py
tests/: test_admin_frontend.py  test_chat_model_settings.py  test_chat_routes.py  test_document_chunker.py  test_document_repository.py  test_document_service.py  test_document_vectorizer.py  test_documents_routes.py  test_embeddings.py  test_ingestion_routes.py  test_markdown_cleaner.py  test_milvus_vector_store.py  test_openai_chat.py  test_query_router.py  test_rag_service.py  test_retrieval_evaluation.py  test_retrieval_routes.py  test_retrieval_service.py
(+60 files in other folders)
